K8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-node-deployment
  template:
    metadata:
      labels:
        app: customer-node-deployment
    spec:
      containers:
        - name: customer
          image: xdev78/customer-node:v1
          ports:
            - containerPort: 3501
---
apiVersion: v1
kind: Service
metadata:
  name: customer-node-service
spec:
  type: NodePort
  selector:
    app: customer-node-deployment
  ports:
    - port: 3501
      targetPort: 3501
      nodePort: 31280
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-node-deployment
  template:
    metadata:
      labels:
        app: shopping-node-deployment
    spec:
      containers:
        - name: shopping
          image: xdev78/shopping-node:v1
          ports:
            - containerPort: 3502
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-service
spec:
  type: NodePort
  selector:
    app: shopping-node-deployment
  ports:
    - port: 3502
      targetPort: 3502
      protocol: TCP
      nodePort: 31281

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-node-deployment
  template:
    metadata:
      labels:
        app: product-node-deployment
    spec:
      containers:
        - name: product
          image: xdev78/product-node:v1
          ports:
            - containerPort: 3500
---
apiVersion: v1
kind: Service
metadata:
  name: product-node-service
spec:
  type: NodePort
  selector:
    app: product-node-deployment
  ports:
    - port: 3500
      targetPort: 3500
      nodePort: 31282
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-node
  template:
    metadata:
      labels:
        app: gateway-node
    spec:
      containers:
        - name: gateway
          image: xdev78/gateway:v2
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway-node
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 31283
      protocol: TCP
