K8s/customer-deploiement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-node-deployment
  template:
    metadata:
      labels:
        app: customer-node-deployment
    spec:
      containers:
        - name: customer
          image: xdev78/customer-node:v1
          ports:
            - containerPort: 3501

---
apiVersion: v1
kind: Service
metadata:
  name: customer-node-service
spec:
  selector:
    app: customer-node-deployment
  ports:
    - protocol: TCP
      port: 3501
      targetPort: 3501
  type: LoadBalancer
