K8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-node-service
spec:
  selector:
    app: customer-node-deployment
  ports:
    - name: http
      protocol: TCP
      port: 3501
      targetPort: 3501
  type: LoadBalancer
