K8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocery-frontend-service
spec:
  selector:
    app: grocery-frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
