K8s/gateway-deploiement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-node
  template:
    metadata:
      labels:
        app: gateway-node
    spec:
      containers:
        - name: gateway
          image: xdev78/gateway:v1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-node
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
