K8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-node
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
