K8s/product-deploiement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-node-deployment
  template:
    metadata:
      labels:
        app: product-node-deployment
    spec:
      containers:
      - name: product
        image: xdev78/product-node:v1
        ports:
        - containerPort: 3500
apiVersion: v1
kind: Service
metadata:
  name: product-node-service
spec:
  selector:
    app: product-node-deployment
  ports:
    - protocol: TCP
      port: 3500
      targetPort: 3500
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: product-node-service
spec:
  selector:
    app: product-node-deployment
  ports:
    - protocol: TCP
      port: 3500
      targetPort: 3500
  type: LoadBalancer
