K8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-node-service
spec:
  selector:
    app: product-node-deployment
  ports:
    - name: https
      protocol: TCP
      port: 3500
      targetPort: 3500
  type: LoadBalancer
