K8s/shopping-deploiement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-node-deployment
  template:
    metadata:
      labels:
        app: shopping-node-deployment
    spec:
      containers:
      - name: shopping
        image: xdev78/shopping-node:v1
        ports:
        - containerPort: 3502

---
apiVersion: v1
kind: Service
metadata:
  name: shopping-service
spec:
  selector:
    app: shopping-node-deployment
  ports:
    - protocol: TCP
      port: 3502
      targetPort: 3502
  type: LoadBalancer
