K8s/shopping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-service
spec:
  selector:
    app: shopping-node-deployment
  ports:
    - name: http
      protocol: TCP
      port: 3502
      targetPort: 3502
  type: LoadBalancer
