K8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grocery-shopping.food
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocery-frontend-service
                port:
                  number: 3000
